--- a/css/minha-conta.css
+++ b/css/minha-conta.css
@@ -1,18 +1,30 @@
+* {
+  font-family: var(--fonte-principal);
+  font-size: 16px;
+}
+
 :root {
   --fonte-principal: 'Roboto', sans-serif;
-  --cor-principal: rgb(21, 21, 21);
+  --cor-principal: #151515;
   --background-navbar: #242424;
-  --background-header: rgba(0, 0, 0, 1);
+  --background-header: #000000;
   --cor-secundaria: #cccccc;
 }
 
-section {
-  padding: 0 24px;
+h3 {
+  padding-bottom: 1rem;
+  line-height: 18.75px;
+  font-weight: 700;
+  color: #eeeeee;
 }
 
-.conta-perfil {
+section {
+  padding: 2rem 24px;
+  border-bottom: 1px solid #262626;
+}
+
+.perfil {
   display: flex;
-  font-family: var(--fonte-principal);
   line-height: 18.75px;
 }
 
@@ -33,4 +45,24 @@ section {
 .container-direito {
   font-weight: 400;
   color: var(--cor-secundaria);
+}
+
+.recompensa-progresso img {
+  width: 3rem;
+}
+
+.progresso-icones {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  column-gap: 1rem;
+}
+
+.icone-ativo,
+.icone-inativo {
+  width: .5rem;
+}
+
+.icone-inativo {
+  opacity: 20%;
 }
