--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,19 @@ header {
     justify-content: center;
     align-items: center;
     gap: 110px;
-    position: fixed
+    position: fixed;
+}
+
+.cbc {
+
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
 }
 
 header p {
@@ -21,6 +33,10 @@ header p {
     color: #FFF;
     font-size: 12px;
     font-weight: 500;
+}
+
+.destaque {
+    margin-top: 10px;
 }
 
 h1 {
@@ -34,6 +50,14 @@ h2 {
     padding: 0.7em;
 }
 
+h3 {
+    font-family: var(--fonte-principal);
+    color: #eeee;
+    font-size: 1.5em;
+    padding: 1.5em;
+    margin-top: 15px;
+}
+
 
 .todos_filmes {
     font-family: var(--fonte-principal);
@@ -42,6 +66,7 @@ h2 {
     grid-auto-flow: column;
     grid-auto-columns: 60%;
     overflow-x: auto;
+    scroll-snap-type: x mandatory;
 }
 
 .todos_filmes::-webkit-scrollbar {
@@ -52,47 +77,103 @@ h2 {
     border-radius: 10px;
 }
 
-.texto_filme{
+.texto_filme {
     margin-left: 10px;
     font-size: 12px;
 
 }
 
-.saiba_mais{
+.saiba_mais {
     cursor: pointer;
     border: none;
     background: transparent;
     font-family: var(--fonte-principal);
     color: #FFF
+}
+
+.saiba_mais:hover {
+    color: blue;
 
 }
 
-.saiba_mais:hover{
-        color: blue;
-
+.sinopse_filme::backdrop {
+    background-color: rgb(0 0 0/.5);
 }
 
-.sinopse_filme::backdrop{
-background-color: rgb(0 0 0/.5);
-}
- .sinopse_filme{
-    width: 80%; 
-    position: fixed; 
+.sinopse_filme {
+    width: 80%;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: var(--cor-principal); 
-    padding: 20px; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
-    z-index: 1000; 
+    background-color: var(--cor-principal);
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
     display: none;
- }
+}
 
- .sinopse_filme
- .sair{
+.sinopse_filme .sair {
     margin-top: 20px;
     cursor: pointer;
- }
+}
+
+.obtidos {
+    padding: 20px;
+}
+
+.obtidos h3 {
+    margin-bottom: 20px;
+    /* Espaço abaixo do título */
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    /* Centraliza o título */
+}
+
+.vem {
+    display: flex;
+    align-items: center;
+    background-color: #222222;
+    color: white;
+    padding: 20px;
+    border-radius: 8px;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.vem img {
+    max-width: 150px;
+    height: auto;
+    border-radius: 8px;
+    margin-right: 20px;
+}
+
+.vem .textos {
+    flex: 1;
+}
+
+.vem .textos p {
+    margin: 5px 0;
+
+}
+
+.vem .view-details {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    color: #007BFF;
+    /* Cor azul para o texto */
+    text-decoration: none;
+    /* Remove o sublinhado */
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.vem .view-details:hover {
+    color: #0056b3;
+    /* Cor azul escura ao passar o mouse */
+}
 
 
 .navbar-inferior {
